Version 1.2.4

Version 1.2.3
- Added Chinese Translation (zh_cn) by Kzeroko (Was not in the last update by mistake)
- Added Russian Translation (ru_ru) by The_Same_Cat
- Added the Ability for mobs to be seen as a boss and miniboss even though the type is not using tags
- Fixed Drowned crashing the game when throwing trident
- Fixed Bows and Crossbows doing Melee Damage

Version 1.2.2
- Added config option for making the tooltip only render when shift is pressed
- Added Compatibility to Better Combat by Daedelus

- Changed the default for the tooltip to not require shift

- Fixed Bows doing too much damage

Version 1.2.1
- Updated German translation
- Fixed Hit XP not applying when killing a mob
- Fixed Critical Server Crash

Version 1.2
- Added Armor Support for Leveling
- Added TOAST Option as a Level Up Notification
- Added config option to choose where the Player should be notified about a Level Up
- Added Armor Leveling
- Added Damage Reduction when leveling armor
- Added Thrown Trident support
- Added Config option to blacklist items to not be used as Melee Weapons (E.g. Guns)
- Added Mixin Extras by LlamaLad7 to the mod
- Added Crossbow to the default list
- Added Config option for the percentage of reduction for a full level armor piece

- Changed en_us translation "leveled up to level" to "reached level"
- Changed de_de translation "stieg auf zu dem level" to "erreichte das Level"
- Changed translation key "weaponleveling.actionbar.levelup" to "weaponleveling.levelup"

- Fixed Item only getting 1 xp point for excess xp when leveling up
- Fixed Arrows only damaging Entities when the arrow's owner is online
- Fixed Bows causing melee damage
- Fixed Other kinds of melee weapons not working





Version 1.1
- Added Server Config to change things about the mod
- Added hitting xp amount config option
- Added hitting xp percentage config option
- Added max level config option
- Added level modifier config option
- Added starting level amount config option