@@ -23,7 +23,7 @@ public abstract class MixinBowItem {
             method = "releaseUsing",
             at = @At(value = "INVOKE",  target = "Lnet/minecraft/world/entity/projectile/AbstractArrow;shootFromRotation(Lnet/minecraft/world/entity/Entity;FFFFF)V"), locals = LocalCapture.CAPTURE_FAILEXCEPTION)
     private void injectedDamage(ItemStack stack, Level level, LivingEntity entity, int i1, CallbackInfo ci, Player player, boolean flag, ItemStack itemstack, int i, float f, boolean flag1, ArrowItem arrowitem, AbstractArrow abstractarrow) {
-        if(UpdateLevels.isAcceptedMeleeWeapon(stack)) {
+        if(UpdateLevels.isAcceptedProjectileWeapon(stack)) {
             double weaponlevelamount = stack.getOrCreateTag().getInt("level");
             weaponlevelamount *= WeaponLevelingConfig.Server.value_damage_per_level.get() /2;
             abstractarrow.setBaseDamage(abstractarrow.getBaseDamage() + weaponlevelamount);
