@@ -19,7 +19,7 @@ public class MixinPlayer {
             method = "attack",
             at = @At(value = "INVOKE",  target = "Lnet/minecraft/world/item/ItemStack;copy()Lnet/minecraft/world/item/ItemStack;"), locals = LocalCapture.CAPTURE_FAILEXCEPTION)
     private void injectedDamage(Entity target, CallbackInfo ci, float f, float f1, float f2, boolean flag, boolean flag1, float i, boolean flag2, CriticalHitEvent hitResult, boolean flag3, double d0, float f4, boolean flag4, int j, Vec3 vec3, boolean flag5, ItemStack stack, Entity entity) {
-        if(UpdateLevels.isAcceptedMeleeWeapon(stack) && !(stack.getItem() instanceof ProjectileWeaponItem || UpdateLevels.isAcceptedProjectileWeapon(stack))) {
+        if(UpdateLevels.isAcceptedMeleeWeapon(stack)) {
             var player = ((Player) ((Object)this) );
             UpdateLevels.applyXPOnItemStack(stack,  player, target);
 
