@@ -24,7 +24,7 @@ public abstract class MixinThrownTrident {
             method = "onHitEntity",
             at = @At(value = "INVOKE",  target = "Lnet/minecraft/world/entity/projectile/ThrownTrident;playSound(Lnet/minecraft/sounds/SoundEvent;FF)V"), locals = LocalCapture.CAPTURE_FAILEXCEPTION)
     private void injectedDamage(EntityHitResult result, CallbackInfo ci, Entity entity, float f, Entity entity1, DamageSource damagesource, SoundEvent soundevent, float f1) {
-        if(UpdateLevels.isAcceptedMeleeWeapon(tridentItem) && entity1 instanceof Player) {
+        if(UpdateLevels.isAcceptedProjectileWeapon(tridentItem) && entity1 instanceof Player) {
             UpdateLevels.applyXPOnItemStack(tridentItem, (Player) entity1, entity);
         }
     }
