@@ -1,4 +1,12 @@
 Version 1.2.4
+- Added config projectile_items option to add Projectile Weapons separately
+- Added builtin support for the tetra mod
+
+- Changed config option added_items to melee_items
+
+- Removed no_melee option for the config
+
+- Fixed custom bosses not working
 
 Version 1.2.3
 - Added Chinese Translation (zh_cn) by Kzeroko (Was not in the last update by mistake)
